<resources>
    <string name="app_name">TBC_HomeWork_8</string>
    <string name="background_picture">background_picture</string>
    <string name="button">Get Started</string>
    <string name="play_the_best_ngames_everyday_nwith_witcher_now">Play the best \ngames everyday \nwith Witcher now!</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>